--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -1,60 +1,91 @@
-%h1 FAQ
+%h1 FAQ Advising Questions
 
 %table
-  %thead
-    %th Question
-    %th Answer
   %tbody
     %tr
-      %td Why should you use Ruby?
-      %td Because it scales!
-    %tr
-      %td How do I search for classes?
       %td
-        You can either search from the top right search box, or from the
-        =link_to 'explorer page.', root_path
+        Q: Where can I find my degree requirements?
     %tr
-      %td How can I sign in?
-      %td Authentication is done via Case's Single Sign On. You will be redirected there if you ever need to login to access something.
-    %tr
-      %td What things do I need to be logged in to access?
-      %td Currently, just Wishlist and Scheduler. These are the only things that are personal to you.
-    %tr
-      %td Is signing in safe?
-      %td Absolutely. Authentication is managed via Single Sign On. We never even see your password; SSO just tells us that you're legit.
-    %tr
-      %td What's a wishlist?
-      %td A wishlist is a list of classes you're interested in taking at some point. You can sign up to get notifications when a class on your wishlist becomes schedulable?
-    %tr
-      %td How do I add a class to my wishlist?
       %td
-        On the
-        =link_to 'wishlist page,', wishlist_path
-        if you start typing, you'll see a dropdown list of classes. Select one, and it will be added to your wishlist.
+        A: The #{ link_to 'University Bulletin', 'http://bulletin.case.edu/'} is your legally binding list of requirements.
+        You alone are #{ link_to 'responsible', 'http://case.edu/ugstudies/academic-policies/academic-regulations/' }
+        for making sure they are correct by the time of your graduation. SIS is not guaranteed to be up-to-date or error
+        free.
 
-        Alternatively, you can add a class from it's own page.
     %tr
-      %td How do I remove a class from my wishlist?
       %td
-        On the
-        =link_to 'wishlist page,', wishlist_path
-        there are links to remove classes from your wishlist.
-        Alternatively, you can remove a class from it's own page, similarly to how you can add one.
+        Q: What if the requirements have changed since I entered CWRU?
     %tr
-      %td What's the scheduler?
-      %td Scheduler is a way for you to plan out your semesters. You can add courses for a given semester, and they will be displayed in a nice calendar view.
-    %tr
-      %td How do I add courses to my planned schedule?
       %td
-        The exact same way you add classes to a wishlist! Go to the
-        =link_to 'scheduler page', scheduler_path
-        and start typing in the textbox. Then select from the drop down.
+        A: Your official requirements are the ones that were instated when you matriculated. Some departments may have
+        allow you to switch to a later set of requirements, but you'll need to check with your advisor first.
+
     %tr
-      %td How do I remove classes from my planned schedule?
-      %td ... coming soon!
+      %td
+        Q: What if what I see on SIS doesn't match up with what I see on the Bulletin?
     %tr
-      %td How do I add classes to a planned schedule for another semester?
-      %td Choose the semester (fall/spring/summer and year) you want and hit "Change Semester". The calendar will reload to the correct semester, and you will be able to add classes to it.
+      %td
+        A: Please keep in mind that if the change is in your favor, you may need to fill out an advisement correction form.
+        All Undergraduate Studies forms are available in their office and
+        online #{ link_to 'here', 'http://case.edu/ugstudies/forms/' }.
+
     %tr
-      %td What is first half and second half in Scheduler?
-      %td That is to distinguish between the first and second halves of semesters. This is really only useful if you're looking for gym classes. Otherwise, you don't really need to worry about it.
+      %td
+        Q: What should I do if I can't reach my advisor?
+    %tr
+      %td
+        A: Remember your advisors are human, too, so give them an appropriate amount of time to respond. If emailing and
+        showing up to office hours aren't enough or if it's a time-sensitive issue, you can always talk to your
+        Undergraduate Studies Dean during #{ link_to 'Walk-In Hours', 'http://case.edu/ugstudies/walkin/'} for official
+        business (major changes, hold releases, requirement conflicts, etc.). Office hours change every week to make sure
+        you can find a time that doesn't conflict with your classes.
+
+    %tr
+      %td
+        Q: How do I know who my Dean is?
+    %tr
+      %td
+        A: You can check your Dean #{ link_to 'here', 'http://case.edu/ugstudies/about-us/who-we-are/'}.
+
+    %tr
+      %td
+        Q: Is X number of credits too many?
+    %tr
+      %td
+        A: You're the only one who can judge how many credits you can handle. 12 is the minimum amount of credits to
+        remain a full-time student. Don't compare yourself to others to determine how many credits you can handle in a
+        single semester. Gather your own information on the courses you're considering and consider your own limits
+        to make your own judgement.
+
+    %tr
+      %td
+        Q: A class I've been waiting to take hasn't been offered in a while. When will it be offered again?
+    %tr
+      %td
+        A: We can't predict when classes will be offered again, but you can sign up to be notified via email with The Jolly
+        Advisor #{ link_to 'wishlist', wishlist_path } feature. Additionally, use Course Show Pages to see when the class
+        was last offered and which professor taught the course.
+
+    %tr
+      %td
+        Q: How do I know if I'm in danger of losing my scholarship?
+    %tr
+      %td
+        A: Scholarship retention criteria is
+        #{ link_to 'here', 'http://case.edu/ugstudies/academic-policies/scholarship-retention-criteria/'}.
+
+    %tr
+      %td
+        Q: How up to date is The Jolly Advisor?
+    %tr
+      %td
+        A: We pull in new data from SIS every 24 hours, so we're never more than a day behind.
+
+    %tr
+      %td
+        Q: What if I find something that's incorrect on this page or on The Jolly Advisor?
+    %tr
+      %td
+        A: We do our best to keep information up-to-date. This is a student run site, so we can quickly respond to changes
+        or discrepancies. All you have to do is #{ link_to 'let us know', 'http://feathub.com/hacsoc/the_jolly_advisor'}
+        and we'll get it fixed as soon as possible.
