Made FAQ page look pretty

--- a/app/assets/stylesheets/faq.css.less
+++ b/app/assets/stylesheets/faq.css.less
@@ -2,7 +2,22 @@
   font-size: 15px;
 }
 
+#faq_main > div.main.panel-body > div > div > div.answer-body{
+  padding: 15px;
+}
+
 .clickaable {
   cursor: pointer;
 }
 
+a{
+  color: #2280ff;
+}
+
+a:visited{
+  color: #77CCDD;
+}
+
+a:hover{
+  color: #730E15;
+}
