--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -11,105 +11,90 @@
           .panel.panel-default
             .panel-heading
               %h4 Where can I find my degree requirements?
-              %span.pull-right.clickable.glyphicon.glyphicon-chevron-up
+              -#%span.pull-right.clickable
+              -#  %i.glyphicon.glyphicon-chevron-up
             .answer-body
               The #{ link_to 'University Bulletin', 'http://bulletin.case.edu/'} is your legally binding list of requirements.
               You alone are #{ link_to 'responsible', 'http://case.edu/ugstudies/academic-policies/academic-regulations/' }
               for making sure they are correct by the time of your graduation. SIS is not guaranteed to be up-to-date or error
               free.
+        .col-md-8
+          .panel.panel-default
+            .panel-heading
+              %h4 What if the requirements have changed since I entered CWRU?
+              -#%span.pull-right.clickable
+              -#  %i.glyphicon.glyphicon-chevron-up
+            .answer-body
+              Your official requirements are the ones that were instated when you matriculated. Some departments may have
+              allow you to switch to a later set of requirements, but you'll need to check with your advisor first.
+        .col-md-8
+          .panel.panel-default
+            .panel-heading
+              %h4 What if what I see on SIS doesn't match up with what I see on the Bulletin?
+              -#%span.pull-right.clickable
+              -#  %i.glyphicon.glyphicon-chevron-up
+            .answer-body
+              Please keep in mind that if the change is in your favor, you may need to fill out an advisement correction form.
+              All Undergraduate Studies forms are available in their office and
+              online #{ link_to 'here', 'http://case.edu/ugstudies/forms/' }.
+        .col-md-8
+          .panel.panel-default
+            .panel-heading
+              %h4 What should I do if I can't reach my advisor?
+              -#%span.pull-right.clickable
+              -#  %i.glyphicon.glyphicon-chevron-up
+            .answer-body
+              Remember your advisors are human, too, so give them an appropriate amount of time to respond. If emailing and
+              showing up to office hours aren't enough or if it's a time-sensitive issue, you can always talk to your
+              Undergraduate Studies Dean during #{ link_to 'Walk-In Hours', 'http://case.edu/ugstudies/walkin/'} for official
+              business (major changes, hold releases, requirement conflicts, etc.). Office hours change every week to make sure
+              you can find a time that doesn't conflict with your classes.
+        .col-md-8
+          .panel.panel-default
+            .panel-heading
+              %h4 How do I know who my Dean is?
+              -#%span.pull-right.clickable
+              -#  %i.glyphicon.glyphicon-chevron-up
+            .answer-body
+              You can check your Dean #{ link_to 'here', 'http://case.edu/ugstudies/about-us/who-we-are/'}.
+        .col-md-8
+          .panel.panel-default
+            .panel-heading
+              %h4 Is X number of credits too many?
+              -#%span.pull-right.clickable
+              -#  %i.glyphicon.glyphicon-chevron-up
+            .answer-body
+              You're the only one who can judge how many credits you can handle. 12 is the minimum amount of credits to
+              remain a full-time student. Don't compare yourself to others to determine how many credits you can handle in a
+              single semester. Gather your own information on the courses you're considering and consider your own limits
+              to make your own judgement.
+        .col-md-8
+          .panel.panel-default
+            .panel-heading
+              %h4 A class I've been waiting to take hasn't been offered in a while. When will it be offered again?
+              -#%span.pull-right.clickable
+              -#  %i.glyphicon.glyphicon-chevron-up
+            .answer-body
+              We can't predict when classes will be offered again, but you can sign up to be notified via email with The Jolly
+              Advisor #{ link_to 'wishlist', wishlist_path } feature. Additionally, use Course Show Pages to see when the class
+              was last offered and which professor taught the course.
+        .col-md-8
+          .panel.panel-default
+            .panel-heading
+              %h4 How up to date is The Jolly Advisor?
+              -#%span.pull-right.clickable
+              -#  %i.glyphicon.glyphicon-chevron-up
+            .answer-body
+              We pull in new data from SIS every 24 hours, so we're never more than a day behind.
+        .col-md-8
+          .panel.panel-default
+            .panel-heading
+              %h4 What if I find something that's incorrect on this page or on The Jolly Advisor?
+              -#%span.pull-right.clickable
+              -#  %i.glyphicon.glyphicon-chevron-up
+            .answer-body
+              We do our best to keep information up-to-date. This is a student run site, so we can quickly respond to changes
+              or discrepancies. All you have to do is #{ link_to 'let us know', 'http://feathub.com/hacsoc/the_jolly_advisor'}
+              and we'll get it fixed as soon as possible.
 
 
-
-%br
-%br
-%hr
-
-%table
-  %tbody
-    %tr
-      %td
-        Q: Where can I find my degree requirements?
-    %tr
-      %td
-        A: The #{ link_to 'University Bulletin', 'http://bulletin.case.edu/'} is your legally binding list of requirements.
-        You alone are #{ link_to 'responsible', 'http://case.edu/ugstudies/academic-policies/academic-regulations/' }
-        for making sure they are correct by the time of your graduation. SIS is not guaranteed to be up-to-date or error
-        free.
-
-    %tr
-      %td
-        Q: What if the requirements have changed since I entered CWRU?
-    %tr
-      %td
-        A: Your official requirements are the ones that were instated when you matriculated. Some departments may have
-        allow you to switch to a later set of requirements, but you'll need to check with your advisor first.
-
-    %tr
-      %td
-        Q: What if what I see on SIS doesn't match up with what I see on the Bulletin?
-    %tr
-      %td
-        A: Please keep in mind that if the change is in your favor, you may need to fill out an advisement correction form.
-        All Undergraduate Studies forms are available in their office and
-        online #{ link_to 'here', 'http://case.edu/ugstudies/forms/' }.
-
-    %tr
-      %td
-        Q: What should I do if I can't reach my advisor?
-    %tr
-      %td
-        A: Remember your advisors are human, too, so give them an appropriate amount of time to respond. If emailing and
-        showing up to office hours aren't enough or if it's a time-sensitive issue, you can always talk to your
-        Undergraduate Studies Dean during #{ link_to 'Walk-In Hours', 'http://case.edu/ugstudies/walkin/'} for official
-        business (major changes, hold releases, requirement conflicts, etc.). Office hours change every week to make sure
-        you can find a time that doesn't conflict with your classes.
-
-    %tr
-      %td
-        Q: How do I know who my Dean is?
-    %tr
-      %td
-        A: You can check your Dean #{ link_to 'here', 'http://case.edu/ugstudies/about-us/who-we-are/'}.
-
-    %tr
-      %td
-        Q: Is X number of credits too many?
-    %tr
-      %td
-        A: You're the only one who can judge how many credits you can handle. 12 is the minimum amount of credits to
-        remain a full-time student. Don't compare yourself to others to determine how many credits you can handle in a
-        single semester. Gather your own information on the courses you're considering and consider your own limits
-        to make your own judgement.
-
-    %tr
-      %td
-        Q: A class I've been waiting to take hasn't been offered in a while. When will it be offered again?
-    %tr
-      %td
-        A: We can't predict when classes will be offered again, but you can sign up to be notified via email with The Jolly
-        Advisor #{ link_to 'wishlist', wishlist_path } feature. Additionally, use Course Show Pages to see when the class
-        was last offered and which professor taught the course.
-
-    %tr
-      %td
-        Q: How do I know if I'm in danger of losing my scholarship?
-    %tr
-      %td
-        A: Scholarship retention criteria is
-        #{ link_to 'here', 'http://case.edu/ugstudies/academic-policies/scholarship-retention-criteria/'}.
-
-    %tr
-      %td
-        Q: How up to date is The Jolly Advisor?
-    %tr
-      %td
-        A: We pull in new data from SIS every 24 hours, so we're never more than a day behind.
-
-    %tr
-      %td
-        Q: What if I find something that's incorrect on this page or on The Jolly Advisor?
-    %tr
-      %td
-        A: We do our best to keep information up-to-date. This is a student run site, so we can quickly respond to changes
-        or discrepancies. All you have to do is #{ link_to 'let us know', 'http://feathub.com/hacsoc/the_jolly_advisor'}
-        and we'll get it fixed as soon as possible.
