Centered Q&As of FAQ page

--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -7,7 +7,7 @@
       .panel-heading{style: "background-color:#111;color:#fff;"}
         %h1 FAQ Advising Questions
       .main.panel-body
-        .col-md-8
+        .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 Where can I find my degree requirements?
@@ -18,7 +18,7 @@
               You alone are #{ link_to 'responsible', 'http://case.edu/ugstudies/academic-policies/academic-regulations/' }
               for making sure they are correct by the time of your graduation. SIS is not guaranteed to be up-to-date or error
               free.
-        .col-md-8
+        .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 What if the requirements have changed since I entered CWRU?
@@ -27,7 +27,7 @@
             .answer-body
               Your official requirements are the ones that were instated when you matriculated. Some departments may have
               allow you to switch to a later set of requirements, but you'll need to check with your advisor first.
-        .col-md-8
+        .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 What if what I see on SIS doesn't match up with what I see on the Bulletin?
@@ -37,7 +37,7 @@
               Please keep in mind that if the change is in your favor, you may need to fill out an advisement correction form.
               All Undergraduate Studies forms are available in their office and
               online #{ link_to 'here', 'http://case.edu/ugstudies/forms/' }.
-        .col-md-8
+        .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 What should I do if I can't reach my advisor?
@@ -49,7 +49,7 @@
               Undergraduate Studies Dean during #{ link_to 'Walk-In Hours', 'http://case.edu/ugstudies/walkin/'} for official
               business (major changes, hold releases, requirement conflicts, etc.). Office hours change every week to make sure
               you can find a time that doesn't conflict with your classes.
-        .col-md-8
+        .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 How do I know who my Dean is?
@@ -57,7 +57,7 @@
               -#  %i.glyphicon.glyphicon-chevron-up
             .answer-body
               You can check your Dean #{ link_to 'here', 'http://case.edu/ugstudies/about-us/who-we-are/'}.
-        .col-md-8
+        .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 Is X number of credits too many?
@@ -68,7 +68,7 @@
               remain a full-time student. Don't compare yourself to others to determine how many credits you can handle in a
               single semester. Gather your own information on the courses you're considering and consider your own limits
               to make your own judgement.
-        .col-md-8
+        .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 A class I've been waiting to take hasn't been offered in a while. When will it be offered again?
@@ -78,7 +78,7 @@
               We can't predict when classes will be offered again, but you can sign up to be notified via email with The Jolly
               Advisor #{ link_to 'wishlist', wishlist_path } feature. Additionally, use Course Show Pages to see when the class
               was last offered and which professor taught the course.
-        .col-md-8
+        .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 How up to date is The Jolly Advisor?
@@ -86,7 +86,7 @@
               -#  %i.glyphicon.glyphicon-chevron-up
             .answer-body
               We pull in new data from SIS every 24 hours, so we're never more than a day behind.
-        .col-md-8
+        .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 What if I find something that's incorrect on this page or on The Jolly Advisor?
