gets rid of those ugly background highlight colors

--- a/app/assets/stylesheets/about.css.less
+++ b/app/assets/stylesheets/about.css.less
@@ -38,7 +38,7 @@ img.img-circle {
 }
 
 .svg-icon:hover {
-  background-color: none;
+  background-color: transparent;
   text-decoration: none;
 }
 
