--- a/app/views/site/about.html.haml
+++ b/app/views/site/about.html.haml
@@ -49,7 +49,7 @@
       .member-title sysadmin
       .member-icons
         %a.svg-icon.github{ href: 'https://github.com/matthewbentley' }
-        %a.svg-icon.twitter{ href: 'httsp://twitter.com/Matteotom' }
+        %a.svg-icon.twitter{ href: 'https://twitter.com/Matteotom' }
   .col-md-6.col-xs-12.team-member
     .col-xs-3
       %img.img-circle{ src: 'https://avatars2.githubusercontent.com/u/6108241?v=3&s=300' }
@@ -75,7 +75,7 @@
       .member-title Maintainer, Lead Software Team
       .member-icons
         %a.svg-icon.github{ href: 'https://github.com/ajm188' }
-        %a.svg-icon.twitter{ href: 'httsp://github.com/andrew_mason1' }
+        %a.svg-icon.twitter{ href: 'httsp://twitter.com/andrew_mason1' }
   .col-md-6.col-xs-12.team-member
     .col-xs-3
       %img.img-circle{ src: 'https://avatars0.githubusercontent.com/u/1574698?v=3&s=300' }
