--- a/app/assets/stylesheets/courses.css.less
+++ b/app/assets/stylesheets/courses.css.less
@@ -36,12 +36,13 @@ th {
   margin-left: 25px;
   margin-right: 15px;
   margin-bottom: 15px;
-  padding: 5px;
+  padding: 0px 5px;
   height: 25px;
 }
 
 .smstr{
   margin-left: 6px;
+  height: 25px;
 }
 
 .prfssr_input{
