add upvote/downvote actions. attempting to make things pretty

--- a/app/assets/stylesheets/reviews.css.less
+++ b/app/assets/stylesheets/reviews.css.less
@@ -1,3 +1,16 @@
 // Place all the styles related to the reviews controller here.
 // They will automatically be included in application.css.
 // You can use Less here: http://lesscss.org/
+.review .helpfulness {
+  text-align: center;
+}
+
+.review .helpfulness * {
+  display: block;
+}
+
+.review .helpfulness a:hover {
+  background-color: transparent;
+  color: #000;
+  text-decoration: none;
+}
