working review creation, with tests

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -61,3 +61,13 @@
                 %span.helpfulness= review.helpfulness
                 = link_to downvote_review_path(review), remote: true, method: :put, class: 'downvote' do
                   %span.glyphicon.glyphicon-chevron-down
+            %hr
+          - if user_signed_in?
+            .new-review.row
+              = form_for Review.new, remote: true do |f|
+                = f.hidden_field :course_id, value: @course.id
+                = f.hidden_field :user_id, value: current_user.id
+                .input-group
+                  = f.text_field :body, class: 'form-control'
+                  = f.select :professor_id, options_for_select(@course.real_professors.map { |p| [p.name, p.id] })
+                = f.submit
