pretty up those links. closes #119.

--- a/app/assets/stylesheets/faq.css.less
+++ b/app/assets/stylesheets/faq.css.less
@@ -10,14 +10,14 @@
   cursor: pointer;
 }
 
-a{
+#faq_main a{
   color: #2280ff;
 }
 
-a:visited{
+#faq_main a:visited{
   color: #77CCDD;
 }
 
-a:hover{
+#faq_main a:hover{
   color: #730E15;
 }
