--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,8 +1,11 @@
 @import "twitter/bootstrap/bootstrap";
 
 // Set the correct sprite paths
-@iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
-@iconWhiteSpritePath: image-url("twitter/bootstrap/glyphicons-halflings-white.png");
+@glyphiconsEotPath: image-url("glyphicons-halflings-regular.eot");
+@glyphiconsEotPath_iefix: image-url("glyphicons-halflings-regular.eot?#iefix");
+@glyphiconsWoffPath: image-url("glyphicons-halflings-regular.woff");
+@glyphiconsTtfPath: image-url("glyphicons-halflings-regular.ttf");
+@glyphiconsSvgPath: image-url("glyphicons-halflings-regular.svg");
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 @fontAwesomeEotPath: font-url("fontawesome-webfont.eot");
