wrap and add a dash

--- a/app/views/site/faq.html.haml
+++ b/app/views/site/faq.html.haml
@@ -9,10 +9,11 @@
             .panel-heading
               %h4 Where can I find my degree requirements?
             .answer-body
-              The #{ link_to 'University Bulletin', 'http://bulletin.case.edu/'} is your legally binding list of requirements.
-              You alone are #{ link_to 'responsible', 'http://case.edu/ugstudies/academic-policies/academic-regulations/' }
-              for making sure they are correct by the time of your graduation. SIS is not guaranteed to be up-to-date or error
-              free.
+              The #{link_to 'University Bulletin', 'http://bulletin.case.edu/'}
+              is your legally binding list of requirements. You alone are
+              #{link_to 'responsible', 'http://case.edu/ugstudies/academic-policies/academic-regulations/' }
+              for making sure they are correct by the time of your graduation.
+              SIS is not guaranteed to be up-to-date or error-free.
         .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
