--- a/app/views/site/faq.html.haml
+++ b/app/views/site/faq.html.haml
@@ -19,59 +19,78 @@
             .panel-heading
               %h4 What if the requirements have changed since I entered CWRU?
             .answer-body
-              Your official requirements are the ones that were instated when you matriculated. Some departments may have
-              allow you to switch to a later set of requirements, but you'll need to check with your advisor first.
+              Your official requirements are the ones that were instated when
+              you matriculated. Some departments may have allow you to switch
+              to a later set of requirements, but you'll need to check with
+              your advisor first.
         .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
-              %h4 What if what I see on SIS doesn't match up with what I see on the Bulletin?
+              %h4
+                What if what I see on SIS doesn't match up with what I see on
+                the Bulletin?
             .answer-body
-              Please keep in mind that if the change is in your favor, you may need to fill out an advisement correction form.
-              All Undergraduate Studies forms are available in their office and
-              online #{ link_to 'here', 'http://case.edu/ugstudies/forms/' }.
+              Please keep in mind that if the change is in your favor, you may
+              need to fill out an advisement correction form. All Undergraduate
+              Studies forms are available in their office and online
+              #{link_to 'here', 'http://case.edu/ugstudies/forms/'}.
         .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 What should I do if I can't reach my advisor?
             .answer-body
-              Remember your advisors are human, too, so give them an appropriate amount of time to respond. If emailing and
-              showing up to office hours aren't enough or if it's a time-sensitive issue, you can always talk to your
-              Undergraduate Studies Dean during #{ link_to 'Walk-In Hours', 'http://case.edu/ugstudies/walkin/'} for official
-              business (major changes, hold releases, requirement conflicts, etc.). Office hours change every week to make sure
-              you can find a time that doesn't conflict with your classes.
+              Remember your advisors are human, too, so give them an
+              appropriate amount of time to respond. If emailing and showing
+              up to office hours aren't enough or if it's a time-sensitive
+              issue, you can always talk to your Undergraduate Studies Dean
+              during
+              #{link_to 'Walk-In Hours', 'http://case.edu/ugstudies/walkin/'}
+              for official business (major changes, hold releases, requirement
+              conflicts, etc.). Office hours change every week to make sure you
+              can find a time that doesn't conflict with your classes.
         .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 How do I know who my Dean is?
             .answer-body
-              You can check your Dean #{ link_to 'here', 'http://case.edu/ugstudies/about-us/who-we-are/'}.
+              You can check your Dean
+              #{link_to 'here', 'http://case.edu/ugstudies/about-us/who-we-are/'}.
         .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 Is X number of credits too many?
             .answer-body
-              You're the only one who can judge how many credits you can handle. 12 is the minimum amount of credits to
-              remain a full-time student. Don't compare yourself to others to determine how many credits you can handle in a
-              single semester. Gather your own information on the courses you're considering and consider your own limits
-              to make your own judgement.
+              You're the only one who can judge how many credits you can
+              handle. 12 is the minimum amount of credits to remain a full-time
+              student. Don't compare yourself to others to determine how many
+              credits you can handle in a single semester. Gather your own
+              information on the courses you're considering and consider your
+              own limits to make your own judgement.
         .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
-              %h4 A class I've been waiting to take hasn't been offered in a while. When will it be offered again?
+              %h4
+                A class I've been waiting to take hasn't been offered in a
+                while. When will it be offered again?
             .answer-body
-              We can't predict when classes will be offered again, but you can sign up to be notified via email with The Jolly
-              Advisor #{ link_to 'wishlist', wishlist_path } feature. Additionally, use Course Show Pages to see when the class
-              was last offered and which professor taught the course.
+              We can't predict when classes will be offered again, but you can
+              sign up to be notified via email with The Jolly Advisor
+              #{link_to 'wishlist', wishlist_path} feature. Additionally, use
+              Course Show Pages to see when the class was last offered and
+              which professor taught the course.
         .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
               %h4 How up to date is The Jolly Advisor?
             .answer-body
-              We pull in new data from SIS every 24 hours, so we're never more than a day behind.
+              We pull in new data from SIS every 24 hours, so we're never more
+              than a day behind.
         .col-md-8.col-md-offset-2
           .panel.panel-default
             .panel-heading
-              %h4 What if I find something that's incorrect on this page or on The Jolly Advisor?
+              %h4
+                What if I find something that's incorrect on this page or on
+                The Jolly Advisor?
             .answer-body
               We do our best to keep information up-to-date. This is a student run site, so we can quickly respond to changes
               or discrepancies. All you have to do is #{ link_to 'let us know', 'http://feathub.com/hacsoc/the_jolly_advisor'}
