people should report problems on github

--- a/app/views/site/faq.html.haml
+++ b/app/views/site/faq.html.haml
@@ -92,6 +92,8 @@
                 What if I find something that's incorrect on this page or on
                 The Jolly Advisor?
             .answer-body
-              We do our best to keep information up-to-date. This is a student run site, so we can quickly respond to changes
-              or discrepancies. All you have to do is #{ link_to 'let us know', 'http://feathub.com/hacsoc/the_jolly_advisor'}
+              We do our best to keep information up-to-date. This is a
+              student-run site, so we can quickly respond to changes or
+              discrepancies. All you have to do is
+              #{link_to 'let us know', 'http://github.com/hacsoc/the_jolly_advisor/issues/new'}
               and we'll get it fixed as soon as possible.
