--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -6,10 +6,10 @@
         %span.glyphicon.glyphicon-chevron-down
     .navbar-collapse.collapse
       %ul.nav.navbar-nav
-        %li= link_to "Explorer", courses_path
-        %li= link_to "Scheduler", scheduler_path
-        %li= link_to "Wish List", wishlist_path
-        %li= link_to "FAQ", faq_path
+        %li= link_to "Explorer", courses_path, class: active_tab?(request, root_path, courses_path) ? 'active' : ''
+        %li= link_to "Scheduler", scheduler_path, class: active_tab?(request, scheduler_path) ? 'active' : ''
+        %li= link_to "Wish List", wishlist_path, class: active_tab?(request, wishlist_path) ? 'active' : ''
+        %li= link_to "FAQ", faq_path, class: active_tab?(request, faq_path) ? 'active' : ''
       %ul.nav.navbar-right.navbar-nav
         %li
           %form.navbar-form{role: 'search', action: '/courses', method: :get}
