add bootstrap classes for footer
also makes css for top nav style more specific to not grab footer as well

--- a/app/assets/stylesheets/navbar.css.less
+++ b/app/assets/stylesheets/navbar.css.less
@@ -1,6 +1,6 @@
 /* Styling for navbar (ie top bar) on all pages */
 
-.navbar{
+.navbar.navbar-static{
   position: relative;
   min-height: 50px;
 
