--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,5 +1,4 @@
-%footer
+%footer.navbar.navbar-default.navbar-fixed-bottom
   .container
-    .row
-      .col-md-12.text-right
-        %h5 ©Tekin's Army 2015
+    .navbar-text.navbar-right
+      %h5 ©Tekin's Army 2015
