move footer outside body, add necessary css; closes #127

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -31,7 +31,15 @@
 // Example:
 // @link-color: #ff0000;
 
+body {
+  // http://getbootstrap.com/components/#callout-navbar-fixed-bottom-padding
+  padding-bottom: 60px;
+}
+
 .col-md-9{
   padding-left: 0px;
 }
 
+h5 {
+  margin-top: 0;
+}
