--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -30,11 +30,11 @@
               %th Course
               %th Title
           %tbody#results
-            - @courses.each do |course|
+            - @paginator.each do |course|
               %tr
                 %td.course_num{nowrap: "nowrap"}= link_to course, course
                 %td.course_name= link_to course.title || "Title Not Found", course
-        = paginate @courses
+        = @paginator.paginate self
         %br
-        = page_entries_info @courses, class: 'crs_count'
+        = @paginator.pagination_info(self, class: 'crs_count')
         %hr
