Consolidate routes using the `direct` feature
This was added in rails 5.1. The advantage here is that all our
hard-coded external URLs now live in a single place.

--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -22,18 +22,14 @@ the work on this project was done there, usually during trivia.
 <p>
 If you find a bug in the Jolly Advisor, please let us know so we can fix it
 for you. The best way to let us know about bugs is by
-<a href="https://github.com/hacsoc/the_jolly_advisor/issues/new">
-    submitting an issue on our GitHub
-</a>.
+<%= link_to 'submitting an issue on our GitHub', new_github_issue_url %>
 </p>
 
 <br>
 
 <p>
 Thought of an awesome feature?
-<a href="http://feathub.com/hacsoc/the_jolly_advisor">
-    Make a feature request
-</a>!
+<%= link_to 'Make a feature request', feathub_url %>!
 Has someone else already requested your feature? Give it a +1. We
 prioritize new features by how popular they are, so voting for your favorites
 is the best way to ensure they get added quickly.
@@ -43,10 +39,7 @@ is the best way to ensure they get added quickly.
 
 <p>
 Want to help out? We have a
-<a href="https://github.com/hacsoc/the_jolly_advisor/wiki/Contributing">
-    wiki page
-</a>
-to get you started.
+<%= link_to 'wiki page', github_contributing_wiki_url %> to get you started.
 </p>
 
 <h3>The Team</h3>
