--- a/app/views/site/faq.html.erb
+++ b/app/views/site/faq.html.erb
@@ -11,9 +11,9 @@
                             <h4>Where can I find my degree requirements?</h4>
                         </div>
                         <div class="answer-body">
-                            The <%= link_to 'University Bulletin', 'http://bulletin.case.edu/' %>
+                            The <%= link_to 'University Bulletin', university_bulletin_url %>
                             is your legally binding list of requirements. You alone are
-                            <%= link_to 'responsible', 'http://case.edu/ugstudies/academic-policies/academic-regulations/' %>
+                            <%= link_to 'responsible', university_regulations_url %>
                             for making sure they are correct by the time of your graduation.
                             SIS is not guaranteed to be up-to-date or error-free.
                         </div>
@@ -41,7 +41,7 @@
                             Please keep in mind that if the change is in your favor, you may
                             need to fill out an advisement correction form. All Undergraduate
                             Studies forms are available in their office and online
-                            <%= link_to 'here', 'http://case.edu/ugstudies/forms/' %>.
+                            <%= link_to 'here', ugs_forms_url %>.
                         </div>
                     </div>
                 </div>
@@ -55,8 +55,7 @@
                             appropriate amount of time to respond. If emailing and showing
                             up to office hours aren't enough or if it's a time-sensitive
                             issue, you can always talk to your Undergraduate Studies Dean
-                            during
-                            <%= link_to 'Walk-In Hours', 'http://case.edu/ugstudies/walkin/' %>
+                            during <%= link_to 'Walk-In Hours', ugs_office_hours_url %>
                             for official business (major changes, hold releases, requirement
                             conflicts, etc.). Office hours change every week to make sure you
                             can find a time that doesn't conflict with your classes.
@@ -69,8 +68,7 @@
                             <h4>How do I know who my Dean is?</h4>
                         </div>
                         <div class="answer-body">
-                            You can check your Dean
-                            <%= link_to 'here', 'http://case.edu/ugstudies/about-us/who-we-are/' %>.
+                            You can check your Dean <%= link_to 'here', ugs_deans_url %>.
                         </div>
                     </div>
                 </div>
@@ -126,7 +124,7 @@
                             We do our best to keep information up-to-date. This is a
                             student-run site, so we can quickly respond to changes or
                             discrepancies. All you have to do is
-                            <%= link_to 'let us know', 'http://github.com/hacsoc/the_jolly_advisor/issues/new' %>
+                            <%= link_to 'let us know', new_github_issue_url %>
                             and we'll get it fixed as soon as possible.
                         </div>
                     </div>
